# J-Engine-Dev

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Game/: CMakeLists.txt
J-Engine-Src/: CMakeLists.txt
J-Engine-Src/Game/: CMakeLists.txt
J-Engine-Src/Game-Bootstrap/: CMakeLists.txt
J-Engine-Src/Game-Executable/: CMakeLists.txt
J-Engine-Src/Game/Assets/shaders/: Simple.shader
J-Engine-Src/Game/include/: SimpleRenderer.h
J-Engine-Src/Game/src/: Main.cpp  SimpleRenderer.cpp
J-Engine-Src/J-Editor/: CMakeLists.txt
J-Engine-Src/J-Editor/aseprite/: Editor Icons.aseprite  Editor Icons.json
J-Engine-Src/J-Editor/include/JEditor/Core/: Selection.h
J-Engine-Src/J-Editor/include/JEditor/GUI/: MainWindow.h
J-Engine-Src/J-Editor/include/JEditor/GUI/Panels/: GameViewPanel.h  HierarchyPanel.h  ProjectPanel.h  SceneViewPanel.h
J-Engine-Src/J-Editor/res/shaders/: FB-Default-Blend.shader
J-Engine-Src/J-Editor/src/: main.cpp
J-Engine-Src/J-Editor/src/JEditor/: JEditor.cpp  JEditorApp.cpp
J-Engine-Src/J-Editor/src/JEditor/Core/: Selection.cpp
J-Engine-Src/J-Editor/src/JEditor/GUI/: MainWindow.cpp
J-Engine-Src/J-Editor/src/JEditor/GUI/Panels/: ConsolePanel.cpp  GameViewPanel.cpp  HierarchyPanel.cpp  ProjectPanel.cpp  SceneViewPanel.cpp
J-Engine-Src/J-Engine/: CMakeLists.txt
J-Engine-Src/J-Engine-Editor/: CMakeLists.txt
J-Engine-Src/J-Engine-Editor/Assets/builtin/shaders/: FB-Default-Blend.shader  Indexed.shader  Textured.shader
J-Engine-Src/J-Engine-Editor/Assets/builtin/shaders/GLInc/: JEngine-GLSL.gli
J-Engine-Src/J-Engine-Editor/Assets/builtin/shaders/Gizmos/: Gizmo-Circle.shader
J-Engine-Src/J-Engine-Editor/src/: JEditorApp.cpp  Main.cpp
J-Engine-Src/J-Engine/ext/imgui/: CMakeLists.txt
J-Engine-Src/J-Engine/ext/json/: CMakeLists.txt
J-Engine-Src/J-Engine/ext/zlib-1.2.12/: CMakeLists.txt
J-Engine-Src/J-Engine/include/: JEngine.h
J-Engine-Src/J-Engine/include/Editor/IO/: DirectoryMonitor.h  SerializedNode.h
J-Engine-Src/J-Engine/include/JEngine/: Core.h
J-Engine-Src/J-Engine/include/JEngine/Algorithm/: BinarySearch.h
J-Engine-Src/J-Engine/include/JEngine/Assets/: AssetDataType.h  AssetMetaData.h  AssetPacking.h  AssetPaths.h  AssetType.h  DataAsset.h  IAsset.h  IAssetSerializer.h
J-Engine-Src/J-Engine/include/JEngine/Assets/Decoders/: BMPDecoder.h  DecoderResult.h  PNGDecoder.h
J-Engine-Src/J-Engine/include/JEngine/Assets/Graphics/: Sprite.h
J-Engine-Src/J-Engine/include/JEngine/Assets/Scene/: Scene.h
J-Engine-Src/J-Engine/include/JEngine/Assets/Serializers/: DataAssetSerializer.h  ShaderSerializer.h
J-Engine-Src/J-Engine/include/JEngine/Audio/: AudioClip.h  AudioEngine.h  BeatMap.h  IAudioSource.h
J-Engine-Src/J-Engine/include/JEngine/Collections/: Bitset.h  IRef.h  IReferenceProvider.h  IndexStack.h  ObjectRef.h  PoolAllocator.h  ReferenceVector.h  SubCollection.h  Vector.h
J-Engine-Src/J-Engine/include/JEngine/Components/: CTransform.h  Component.h  ComponentFactory.h
J-Engine-Src/J-Engine/include/JEngine/Core/: Application.h  Assert.h  AssetDB.h  Engine.h  EntryPoint.h  GameObject.h  IObject.h  LayerMask.h  Log.h  Ref.h  Reflection.h  Scene.h  SceneManager.h  String.h
J-Engine-Src/J-Engine/include/JEngine/Cryptography/: CRC32.h  FAH16.h  UUID.h  UUIDFactory.h
J-Engine-Src/J-Engine/include/JEngine/Debug/: FPS.h  GizmoLayer.h
J-Engine-Src/J-Engine/include/JEngine/GUI/: Gui.h
J-Engine-Src/J-Engine/include/JEngine/Global/: UUIDFactory.h
J-Engine-Src/J-Engine/include/JEngine/Helpers/: EnumMacros.h  Helpers.h  NoCopy.h  StringConsts.h  StringExtensions.h  TypeHelpers.h
J-Engine-Src/J-Engine/include/JEngine/IO/: Audio.h  AudioUtils.h  Base64.h  BitStream.h  FileStream.h  Image.h  ImageUtils.h  MemoryStream.h  Stream.h
J-Engine-Src/J-Engine/include/JEngine/IO/Compression/: ZLibStream.h
J-Engine-Src/J-Engine/include/JEngine/IO/Helpers/: FileExtensions.h  (+2 more)
J-Engine-Src/J-Engine/include/JEngine/Input/: Input.h
J-Engine-Src/J-Engine/include/JEngine/Math/: Math.h
J-Engine-Src/J-Engine/include/JEngine/Rendering/: DynamicBatch.h  FrameBuffer.h  ICamera.h  IRenderable.h  IRenderer.h  RenderAPI.h  RenderContext.h  RenderTarget.h  Renderer.h  SortingLayer.h  Window.h
J-Engine-Src/J-Engine/include/JEngine/Utility/: Action.h  ConstSpan.h  DataFormatUtils.h  DataUtilities.h  EnumUtils.h  Flags.h  HeapVector.h  JTime.h  PrintableTypes.h  SIMD.h  Span.h  StringHelpers.h  Version.h
J-Engine-Src/J-Engine/src/Editor/Core/: EditorEssentials.cpp
J-Engine-Src/J-Engine/src/Editor/IO/: DirectoryMonitor.cpp  SerializedNode.cpp
J-Engine-Src/J-Engine/src/JEngine/Assets/: AssetDataType.cpp  AssetMetaData.cpp  AssetPacking.cpp  DataAsset.cpp  IAsset.cpp  SceneAsset.cpp
J-Engine-Src/J-Engine/src/JEngine/Audio/: AudioEngine.cpp  BeatMap.cpp  IAudioSource.cpp
J-Engine-Src/J-Engine/src/JEngine/Components/: CTransform.cpp  Component.cpp  ComponentFactory.cpp
J-Engine-Src/J-Engine/src/JEngine/Core/: Application.cpp  AssetDB.cpp  ComponentRef.cpp  Engine.cpp  GameObject.cpp  LayerMask.cpp  Log.cpp  Ref.cpp  Scene.cpp  SceneManager.cpp
J-Engine-Src/J-Engine/src/JEngine/Cryptography/: FAH16.cpp  UUID.cpp  UUIDFactory.cpp
J-Engine-Src/J-Engine/src/JEngine/Debug/: FPS.cpp
J-Engine-Src/J-Engine/src/JEngine/Debugging/: FPS.cpp
J-Engine-Src/J-Engine/src/JEngine/GUI/: Gui.cpp
J-Engine-Src/J-Engine/src/JEngine/Helpers/: Helpers.cpp  StringExtensions.cpp  TypeHelpers.cpp
J-Engine-Src/J-Engine/src/JEngine/IO/: Audio.cpp  AudioUtils.cpp  Base64.cpp  BitStream.cpp  FileStream.cpp  Image.cpp  ImageUtils.cpp  MemoryStream.cpp
J-Engine-Src/J-Engine/src/JEngine/Input/: Input.cpp
J-Engine-Src/J-Engine/src/JEngine/Math/: Math.cpp
J-Engine-Src/J-Engine/src/JEngine/Rendering/: DynamicBatch.cpp  FrameBuffer.cpp  ICamera.cpp  IRenderer.cpp  RenderAPI.cpp  RenderContext.cpp  RenderTarget.cpp  Renderer.cpp  SortingLayer.cpp  Window.cpp
J-Engine-Src/J-Engine/src/JEngine/Utility/: DataFormatUtils.cpp  EnumUtils.cpp  JTime.cpp  StringHelpers.cpp
J-Engine-Src/J-Player/: CMakeLists.txt
J-Engine-Src/J-Player/src/: main.cpp
(+207 files in other folders)
